<resources>
    <string name="app_name">FuturePlanner</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_clear_monad_selection">Clear</string>
    <string name="monad_money_amount">Amount</string>
    <string name="monad_money_view_text"><![CDATA[$<amount>]]></string>
    <string name="monad_per_year_view_text">per year</string>
    <string name="monad_per_month_view_text">per month</string>
    <string name="monad_per_day_view_text">per day</string>
    <string name="monad_starting_view_text"><![CDATA[starting <date>]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="tab_text_1">Funds</string>
    <string name="tab_text_2">Store</string>
    <string name="title_activity_category_contents_list">CategoryContentsList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_income">Income</string>
    <string name="button_expenses">Expenses</string>
    <string name="button_goals">Goals</string>
    <string name="button_assets">Assets</string>
    <string name="hint_enter_name">Enter name</string>
    <string name="extra_entity_uid">com.example.myfirstapp.ENTITY_UID</string>
    <string name="extra_fact_uid">com.example.myfirstapp.EXTRA_FACT_UID</string>
    <string name="monad_per_week_view_text">per week</string>
    <string name="monad_ending_view_text"><![CDATA[ending <date>]]></string>
    <string name="button_delete_fact">Delete</string>
    <string name="monad_one_off_view_text"><![CDATA[once on <date>]]></string>
    <string name="monad_income_type_untaxed_income">in Untaxed Income</string>
    <string name="monad_income_type_other_income">in Other Income</string>
    <string name="title_activity_entity_settings">EntitySettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="chart_description_funds_over_time">Funds over Time</string>
    <string name="chart_legend_funds">Estimated Available Funds</string>
    <string name="chart_no_data_text">Working on it...</string>
    <string name="toolbar_fact_entry">Create Fact</string>
    <string name="label_region">Region:</string>
    <string name="label_initial_funds">Initial Funds:</string>
    <string name="hint_select_first_option">Tap an option below to get started (try \"amount!\")</string>
    <string name="label_run_duration">Run for:</string>
    <string name="button_start">Start</string>
    <string name="label_amount_preview">Amount Will Be:</string>
    <string name="label_remaining_options">Tap an Option:</string>
    <string name="label_amount_name">Name:</string>
    <string name="label_results">Results:</string>
    <string name="toolbar_title_fact_entry">Edit Amount</string>
    <string name="button_purchase">Purchase</string>
    <string name="title_store">Store</string>
    <string name="error_infinity_or_nan_result_short_message"><![CDATA[FuturePlanner can\'t graph extremely large numbers.]]></string>
    <string name="error_infinity_or_nan_result_long_message"><![CDATA[FuturePlanner encountered either an extremely large number (e.g. more than 30 digits) or was asked to divide by zero. Please check your income, expenses, initial funds, and other inputs.]]></string>
    <string name="button_ok">OK</string>
    <string name="title_error">Oops!</string>
    <string name="monad_per_fortnight_view_text">per fortnight (biweekly)</string>
    <string name="runtime_feature_not_purchased">You need to increase FuturePlanner\'s forecast length to do that by unlocking it in the store. Do you want to go there now? </string>
    <string name="maybe_later">Maybe Later</string>
    <string name="go_to_store">Go To Store</string>
    <string name="description_cant_load_store_items">No items to show. Are you logged into Google Play and connected to the internet?</string>
    <string name="button_owned">Owned</string>
    <string name="label_percent">Percent</string>
    <string name="error_percent_out_of_0_100_range">Percent must be between 0 and 100.</string>
    <string name="moand_percent_deduction"><![CDATA[minus <percent>]]></string>
    <string name="moand_percent_addition"><![CDATA[plus <percent>]]></string>
    <string name="hint_money_amount">An amount of money</string>
    <string name="hint_percent_deduction">Reduces the amount by the given percentage; useful for things like income taxes or discounts </string>
    <string name="hint_percent_addition">Increases the amount by the given percentage; useful for things like sales tax or bonuses</string>
    <string name="hint_per_year">Spreads the amount over the course of a year</string>
    <string name="hint_per_month">Spreads the amount over the course of a month</string>
    <string name="hint_per_week">Spreads the amount over the course of a week</string>
    <string name="hint_per_fortnight">Spreads the amount over the course of a fortnight</string>
    <string name="hint_per_day">Spreads the amount over the course of a day</string>
    <string name="hint_starting">Causes the amount to be applied only after the start date</string>
    <string name="hint_ending">Causes the amount to be applied only before the end date</string>
    <string name="hint_on_date">Causes the amount to be applied exactly once on the given date</string>
    <string name="label_about">About</string>
    <string name="label_disclaimer">Disclaimer &amp; Terms</string>
    <string name="long_text_disclaimer">"FuturePlanner (the "Software") is tool for rapidly exploring ideas. It is NOT a substitute for a financial planner.  Always consult a registered financial planner before making any important life or financial decisions.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. BY USING THE SOFTWARE YOU AGREE AND CONSENT TO THESE TERMS.

    </string>
    <string name="long_text_about">
        FuturePlanner is authored and brought to you by Luminesim Simulation and Analytics (www.luminesim.com).
        We build simulation tools with clients to explore new policy ideas and to rethink and improve the systems that affect our lives.
        If you want test your vision for change in a risk-free environment before bringing it to the real world, we want to hear from you.
        Contact us today at info@luminesim.com.
    </string>
    <string name="tab_text_3">About</string>
    <string name="label_licenses">Licenses</string>
    <string name="long_text_licenses" >"FuturePlanner makes use of the following external projects:
MPAndroidChart (www.github.com/PhilJay/MPAndroidChart)
Project Lombok (www.projectlombok.org)
SimpleFlatMapper (www.simpleflatmapper.org)
SLF4J (www.slf4j.org)"
    </string>
    <string name="hint_autocomplete">Tap one of the options below to build the amount. For example, \"amount\" can be used to get started.</string>
    <string name="button_processes">Processes</string>
    <string name="monad_per_asset"><![CDATA[per <asset type>]]></string>
    <string name="hint_per_asset">Multiplies the amount by the number of the given asset. For example, if you have 10 avocados and your selection is \"$2 per avocado\", the resulting amount will be $20.</string>
    <string name="label_asset">Asset</string>
    <string name="hint_freemium_bass_diffusion_has_free_adopters">The number of adopters of the product or service who do not pay for content.</string>
    <string name="hint_freemium_bass_diffusion_has_paying_adopters">The number of adopters of the product or service who pay for content.</string>
    <string name="hint_freemium_bass_diffusion_has_percent_chance_of_paying_users">Specifies the likelihood with which adopters will pay for features. E.g. if an app has 200 new regular users and 10% pay for features, then 20 users will pay for features while they use the app. </string>
    <string name="hint_freemium_bass_diffusion_has_adopter_lifespan">Specifies the length of time (in months) that adopters use the product or service on average. E.g. a gaming app is used for two months on average before being uninstalled or no longer used.</string>
    <string name="hint_freemium_bass_diffusion">
        A product or service with free and/or paying adopters.
        Adopters start as \"potential\" adopters, who must be convinced to try the product through ads or through word of mouth.
        Advertising and word of mouth success rates can be set as can be retention levels.
        Word of mouth is typically the most effective way of gaining new adopters.
        REQUIRES: Potential adopters, word-of-mouth conversion, advertising conversion.
    </string>
    <string name="hint_freemium_bass_diffusion_has_adopter_retention">Specifies the likelihood that a new adopter will keep using the product after their first try.</string>
    <string name="hint_freemium_bass_diffusion_has_conversion_from_ads">Specifies the percentage of potential adopters per month who will try it for the first time due to ad exposure.</string>
    <string name="hint_freemium_bass_diffusion_has_potential_adopters">Specifies potential adopters</string>
    <string name="hint_freemium_bass_diffusion_has_wom_conversion">WOM conversion</string>
    <string-array name="default_run_duration_array">
        <item>3 months</item>
        <item>6 months</item>
        <item>1 year</item>
        <item>2 years</item>
        <item>5 years</item>
    </string-array>
</resources>