<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        style="@style/AppTheme.RoundedSelection.TextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_about"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/longTextAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web|email"
                android:linksClickable="true"
                android:text="@string/long_text_about"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/labelDisclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_disclaimer"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/longTextDisclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_text_disclaimer"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>