<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ResultChartAndButtonsFragment">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/canvasColor"
        android:elevation="@dimen/selectable_elevation"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- TODO FIXME TEST AD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <Button
                    android:id="@+id/buttonIncome"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/luminesim_horizontal_button_margin"
                    android:layout_weight="1"
                    android:text="@string/button_income" />

                <Button
                    android:id="@+id/buttonExpenses"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/luminesim_horizontal_button_margin"
                    android:layout_weight="1"
                    android:text="@string/button_expenses" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-1047719919485882/5841012369" />

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:minWidth="80dp"
                android:paddingRight="16dp"
                android:text="@string/label_initial_funds"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/initialFundsEditText"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/canvasColor"
                android:elevation="@dimen/selectable_elevation"
                android:inputType="numberDecimal"
                android:paddingHorizontal="@dimen/padding_edit_text_one_line"
                android:paddingVertical="@dimen/padding_edit_text_one_line"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_edit_text_one_line">

            <TextView
                android:id="@+id/textView3"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:minWidth="80dp"
                android:paddingRight="16dp"
                android:text="@string/label_run_duration"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/runDurationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/canvasColor"
                android:elevation="@dimen/selectable_elevation"
                android:entries="@array/default_run_duration_array"
                android:minWidth="100dp"
                android:paddingVertical="8dp"
                android:textSize="14sp"
                android:theme="@style/AppTheme.SelectableText"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/button_start" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="left"
        android:text="@string/label_results"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>